--- a/graphviewer.ui
+++ b/graphviewer.ui
@@ -19,9 +19,12 @@
      <rect>
       <x>30</x>
       <y>140</y>
-      <width>681</width>
+      <width>841</width>
       <height>411</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
@@ -34,7 +37,7 @@
       <rect>
        <x>0</x>
        <y>30</y>
-       <width>391</width>
+       <width>361</width>
        <height>381</height>
       </rect>
      </property>
@@ -47,7 +50,7 @@
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
+       <pointsize>10</pointsize>
       </font>
      </property>
      <property name="focusPolicy">
@@ -58,7 +61,8 @@
 color: rgb(49, 49, 49);
 alternate-background-color: rgb(240, 240, 240);
 selection-color: rgb(49, 49, 49);
-selection-background-color: rgb(118, 158, 81);</string>
+selection-background-color: rgb(118, 158, 81);
+gridline-color: rgb(118, 158, 81);</string>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -83,6 +87,12 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerItem</enum>
+     </property>
+     <property name="horizontalScrollMode">
+      <enum>QAbstractItemView::ScrollPerItem</enum>
      </property>
      <property name="showGrid">
       <bool>false</bool>
@@ -97,19 +107,19 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>50</number>
+      <number>30</number>
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>200</number>
+      <number>300</number>
      </attribute>
      <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
+      <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderDefaultSectionSize">
-      <number>28</number>
+      <number>50</number>
      </attribute>
      <attribute name="verticalHeaderHighlightSections">
       <bool>true</bool>
@@ -118,16 +128,16 @@ selection-background-color: rgb(118, 158, 81);</string>
     <widget class="QTableView" name="back_edges_tableView">
      <property name="geometry">
       <rect>
-       <x>390</x>
+       <x>360</x>
        <y>240</y>
-       <width>291</width>
+       <width>481</width>
        <height>171</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
+       <pointsize>10</pointsize>
       </font>
      </property>
      <property name="focusPolicy">
@@ -174,7 +184,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>50</number>
+      <number>90</number>
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>210</number>
@@ -183,22 +193,22 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderDefaultSectionSize">
-      <number>28</number>
+      <number>50</number>
      </attribute>
     </widget>
     <widget class="QTableView" name="discovery_edges_tableView">
      <property name="geometry">
       <rect>
-       <x>390</x>
+       <x>360</x>
        <y>30</y>
-       <width>291</width>
+       <width>481</width>
        <height>181</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
+       <pointsize>10</pointsize>
       </font>
      </property>
      <property name="focusPolicy">
@@ -238,6 +248,9 @@ selection-background-color: rgb(118, 158, 81);</string>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerItem</enum>
+     </property>
      <property name="showGrid">
       <bool>false</bool>
      </property>
@@ -245,7 +258,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>50</number>
+      <number>90</number>
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>210</number>
@@ -254,7 +267,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderDefaultSectionSize">
-      <number>28</number>
+      <number>50</number>
      </attribute>
     </widget>
     <widget class="QLabel" name="graph_title_label">
@@ -262,9 +275,19 @@ selection-background-color: rgb(118, 158, 81);</string>
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>391</width>
+       <width>361</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -279,11 +302,21 @@ selection-background-color: rgb(118, 158, 81);</string>
     <widget class="QLabel" name="discovery_title_label">
      <property name="geometry">
       <rect>
-       <x>390</x>
+       <x>360</x>
        <y>0</y>
-       <width>291</width>
+       <width>481</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -298,11 +331,21 @@ selection-background-color: rgb(118, 158, 81);</string>
     <widget class="QLabel" name="back_title_label">
      <property name="geometry">
       <rect>
-       <x>390</x>
+       <x>360</x>
        <y>210</y>
-       <width>291</width>
+       <width>481</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -315,76 +358,13 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="place_order_frame">
-    <property name="geometry">
-     <rect>
-      <x>725</x>
-      <y>440</y>
-      <width>165</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Panel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Plain</enum>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <family>Mongolian Baiti</family>
-         <pointsize>12</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(49, 49, 49);
-background-color:  rgb(255, 255, 255);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color:rgb(118, 158, 81);
-min-width: 10em;
-padding: 6px;
-
-QPushButton#visit_store_button: clicked {
-	background-color: rgb(118, 158, 81);
-    border-style: inset;
-}</string>
-       </property>
-       <property name="text">
-        <string>View Graphs</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QFrame" name="total_distance_frame">
     <property name="geometry">
      <rect>
-      <x>725</x>
-      <y>510</y>
-      <width>165</width>
-      <height>41</height>
+      <x>701</x>
+      <y>110</y>
+      <width>170</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -397,30 +377,11 @@ color: rgb(0, 0, 0);</string>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
-    <widget class="QLabel" name="distance_label">
-     <property name="geometry">
-      <rect>
-       <x>105</x>
-       <y>10</y>
-       <width>55</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Mongolian Baiti</family>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>0.0</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="total_title">
      <property name="geometry">
       <rect>
-       <x>5</x>
-       <y>10</y>
+       <x>2</x>
+       <y>5</y>
        <width>101</width>
        <height>21</height>
       </rect>
@@ -436,6 +397,25 @@ color: rgb(0, 0, 0);</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="distance_label">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>5</y>
+       <width>69</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>0.0</string>
      </property>
     </widget>
    </widget>
@@ -458,9 +438,9 @@ color: rgb(0, 0, 0);</string>
    <widget class="QComboBox" name="choose_college_dropdown">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>30</x>
       <y>110</y>
-      <width>291</width>
+      <width>361</width>
       <height>31</height>
      </rect>
     </property>
@@ -783,9 +763,9 @@ QPushButton#visit_store_button: clicked {
    <widget class="QComboBox" name="choose_graph_dropdown">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>390</x>
       <y>110</y>
-      <width>391</width>
+      <width>311</width>
       <height>31</height>
      </rect>
     </property>
