--- a/tripplanner.ui
+++ b/tripplanner.ui
@@ -610,7 +610,7 @@ color: rgb(0, 0, 0);</string>
       <x>630</x>
       <y>440</y>
       <width>241</width>
-      <height>61</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="font">
@@ -656,6 +656,36 @@ QPushButton#visit_store_button: clicked {
        </property>
        <property name="text">
         <string>View Graphs</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="return_home_pushButton">
+       <property name="font">
+        <font>
+         <family>Mongolian Baiti</family>
+         <pointsize>14</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+
+QPushButton#visit_store_button: clicked {
+	background-color: rgb(118, 158, 81);
+    border-style: inset;
+}</string>
+       </property>
+       <property name="text">
+        <string>Return Home</string>
        </property>
       </widget>
      </item>
