--- a/shoppingcart.ui
+++ b/shoppingcart.ui
@@ -72,7 +72,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <x>520</x>
       <y>140</y>
       <width>351</width>
-      <height>401</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -85,68 +85,11 @@ color: rgb(0, 0, 0);</string>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
-    <widget class="QPushButton" name="route_pushButton">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>300</y>
-       <width>331</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>146</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <family>Mongolian Baiti</family>
-       <pointsize>16</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(49, 49, 49);
-background-color:  rgb(255, 255, 255);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color:rgb(118, 158, 81);
-min-width: 10em;
-padding: 6px;
-
-QPushButton#route_pushButton: clicked {
-	background-color: rgb(118, 158, 81);
-    border-style: inset;
-}</string>
-     </property>
-     <property name="text">
-      <string>Proceed to Trip Planner</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QLabel" name="total_amount">
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>260</y>
+       <y>250</y>
        <width>81</width>
        <height>31</height>
       </rect>
@@ -178,7 +121,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>260</y>
+       <y>250</y>
        <width>241</width>
        <height>31</height>
       </rect>
@@ -217,7 +160,7 @@ selection-background-color: rgb(118, 158, 81);</string>
        <x>10</x>
        <y>10</y>
        <width>331</width>
-       <height>251</height>
+       <height>231</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -232,7 +175,7 @@ selection-background-color: rgb(118, 158, 81);</string>
         <x>0</x>
         <y>0</y>
         <width>331</width>
-        <height>251</height>
+        <height>231</height>
        </rect>
       </property>
       <property name="font">
@@ -291,63 +234,6 @@ selection-background-color: rgb(118, 158, 81);</string>
        <number>40</number>
       </attribute>
      </widget>
-    </widget>
-    <widget class="QPushButton" name="pushButton_6">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>350</y>
-       <width>331</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>146</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <family>Mongolian Baiti</family>
-       <pointsize>16</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(49, 49, 49);
-background-color:  rgb(255, 255, 255);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color:rgb(118, 158, 81);
-min-width: 10em;
-padding: 6px;
-
-QPushButton#route_pushButton: clicked {
-	background-color: rgb(118, 158, 81);
-    border-style: inset;
-}</string>
-     </property>
-     <property name="text">
-      <string>Return to School Store</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
     </widget>
    </widget>
    <widget class="QFrame" name="cart_frame">
@@ -685,6 +571,138 @@ selection-background-color: rgb(118, 158, 81);</string>
     <property name="text">
      <string/>
     </property>
+   </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>430</y>
+      <width>351</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QPushButton" name="route_pushButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>331</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+
+QPushButton#plan_route_button: clicked {
+	background-color: rgb(118, 158, 81);
+    border-style: inset;
+	border-color: rgb(49, 49, 49);
+}</string>
+     </property>
+     <property name="text">
+      <string>Plan Route </string>
+     </property>
+     <property name="icon">
+      <iconset resource="resources/resources.qrc">
+       <normaloff>:/plan_route_logo.png</normaloff>:/plan_route_logo.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>35</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>331</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+
+QPushButton#visit_store_button: clicked {
+	background-color: rgb(118, 158, 81);
+    border-style: inset;
+}</string>
+     </property>
+     <property name="text">
+      <string>Return to School Store </string>
+     </property>
+     <property name="icon">
+      <iconset resource="resources/resources.qrc">
+       <normaloff>:/school_store_logo.png</normaloff>:/school_store_logo.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>35</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
